cert-manager/tls/examples/public-web-gw/06-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-https-route
  namespace: elastic-stack
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "kibana.app.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: es-kb-quickstart-eck-kibana-kb-http
          port: 5601                # 投递给后端明文端口
